[package]
name = "date_jar"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", features = ["canvas", "tokio", "debug" ] }
iced_native = { git = "https://github.com/iced-rs/iced.git" }
web-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"
